added aggregated tcg card shop data

--- a/TCG_aggregating_code.ipynb
+++ b/TCG_aggregating_code.ipynb
@@ -146,10 +146,30 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As we can see, the concatenation has been successful and now we can start analyzing and finding trends in the data."
+        "As we can see, the concatenation has been successful. Now, we should save the new dataset to a Feather file."
       ],
       "metadata": {
         "id": "QCGJcmdoXpY2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tcg_data.to_feather(\"TCG_Card_Shop_Data.feather\")"
+      ],
+      "metadata": {
+        "id": "hFic1d7HYA4f"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now that we have saved it, the data is ready to be analyzed."
+      ],
+      "metadata": {
+        "id": "0xIUDIq0YSEc"
       }
     }
   ]
